<resources>
    <string name="app_name">Blog</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="login_register">Register new account</string>
    <string name="login_forgot_password">Forgot Your Password?</string>
    <string name="registration_empty_fields">Both Email and Password should be filled to register new account</string>
    <string name="registration_short_password">Password must have at least 6 symbols</string>
    <string name="registration_invalid_email">Please enter valid Email</string>
    <string name="registration_already_registered">This email already registered</string>
    <string name="login_error">This data do not match our records</string>
    <string name="password_reset_message">Enter your email and we will send you a message to reset your password</string>
    <string name="password_reset">Reset Password</string>
    <string name="posts_detail_your_comment">Write your reaction</string>
    <string name="new_post_hint">Write your post</string>
    <string name="posts_detail_send">Send</string>
    <string name="posts_detail_comments">Comments</string>
    <string name="posts_detail_save">Save</string>
    <string name="new_post_empty_field">You can not save blank post</string>
    <string name="new_post_empty_comment">You can not send empty comment</string>

    <string name="profile_username">Username</string>
    <string name="profile_first_name">First name</string>
    <string name="profile_last_name">Last name</string>
    <string name="profile_last_age">Age</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_gender_male">Male</string>
    <string name="profile_gender_female">Female</string>
    <string name="profile_address">Address</string>
    <string name="profile_website">Website</string>
    <string name="profile_to_blog">To Blog</string>
    <string name="profile_update_profile">Update Profile</string>
    <string name="profile_logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="registration">Registration</string>
    <string name="blog">Blog</string>
    <string name="posts">Posts</string>
    <string name="post">Post</string>
    <string name="new_post">New Post</string>
</resources>
